--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </header>
 
     <div class="subheader">
+      <h1>Explore</h1>
       <nav>
         <a href="#whats-new">whats new</a>
         <a href="#homepages">home pages</a>
