--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <a class="nav-link" href="/">Explore</a>
           <a class="nav-link" href="https://beakerbrowser.com/about">About</a>
           <a class="nav-link" href="https://beakerbrowser.com/docs">Documentation</a>
+          <a class="nav-link" href="https://beakerbrowser.com/contactus">Contact Us</a>
           <a class="nav-link btn white" href="https://beakerbrowser.com/install">Install Beaker</a>
         </nav>
       </div>
